<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editMagnet"
            android:hint="@string/please_enter_magnet_or_magnet_hash" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:layout_marginEnd="14dp"/>
    <Button
            android:text="@string/add_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addMagnetButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editMagnet"/>
    <Button
            android:text="@string/clearButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton" app:layout_constraintStart_toEndOf="@+id/addMagnetButton"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editMagnet"/>
</android.support.constraint.ConstraintLayout>